[package]
name = "discotech"
description = "The best way to meet your service"
version = "0.0.3"
authors = [
  "Tyler Neely <t@jujit.su>",
  "Steve Salevan <steve.salevan@gmail.com>"
]
license = "Apache-2.0"

[[test]]
name = "test"
path = "test/mod.rs"

[dependencies]
zookeeper = "0.5.7"
log = "0.4.8"
log4rs = "0.9.0"
mio = "0.6.21"
rustc-serialize = "0.3"
